welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:34: error: not found: value ||
    if ((getCouleurSol()) == Color.pink) || ((getCouleurSol()) == Color.orange) {
                                         ^